[gd_scene load_steps=4 format=3 uid="uid://di00hnvljxhbl"]

[ext_resource type="Texture2D" uid="uid://bwgsve8dsorj3" path="res://img/null.png" id="1_euxi7"]
[ext_resource type="Script" path="res://code/mapItem.gd" id="2_3mq0h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5guh"]
size = Vector2(520, 520)

[node name="Item" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_euxi7")
script = ExtResource("2_3mq0h")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(2.27374e-13, 2.27374e-13)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_b5guh")

[connection signal="input_event" from="Sprite2D/Area2D" to="Sprite2D" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="Sprite2D" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="Sprite2D" method="_on_area_2d_mouse_exited"]
